--- a/taptap/analytics/ensemble_voting/ensemble_voting.ipynb
+++ b/taptap/analytics/ensemble_voting/ensemble_voting.ipynb
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "32cc2a50",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
    ],
    "source": [
     "import lightgbm as lgb\n",
-    "from sklearn.model_selection import RandomizedSearchCV, StratifiedKFold\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, StratifiedKFold\n",
     "from scipy.stats import randint, uniform # For defining parameter distributions\n",
     "\n",
     "# --- 替换步骤 6 ---\n",
