--- a/taptap/analytics/pretrained_language_models/bert-base-chinese.ipynb
+++ b/taptap/analytics/pretrained_language_models/bert-base-chinese.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9b6d6131",
    "metadata": {},
    "outputs": [
@@ -33,19 +33,19 @@
     }
    ],
    "source": [
-    "# 检查GPU可用性\n",
+    "# Check GPU availability\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "67307505",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 数据加载\n",
+    "# Load data\n",
     "df = pd.read_csv(r\"D:\\GitHubRepos\\is6941-ml-social-media\\taptap\\data\\integrated\\lm_cleaned_taptap_reviews.csv\")\n",
     "df = df[['review_content', 'sentiment']].dropna()\n",
     "df['sentiment'] = df['sentiment'].astype(int)"
@@ -53,12 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ea3bb53c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 划分数据集\n",
+    "# Split dataset\n",
     "train_texts, test_texts, train_labels, test_labels = train_test_split(\n",
     "    df['review_content'].tolist(),\n",
     "    df['sentiment'].tolist(),\n",
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3ac56dc2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 修正后的数据集类\n",
+    "# Updated dataset class\n",
     "class SentimentDataset(Dataset):\n",
     "    def __init__(self, texts, labels, tokenizer):\n",
     "        self.encodings = tokenizer(texts, \n",
-    "                                 padding='max_length',  # 统一填充长度\n",
+    "                                 padding='max_length',  # Uniform padding length\n",
     "                                 truncation=True, \n",
     "                                 max_length=256)\n",
     "        self.labels = labels\n",
@@ -96,22 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "80a80e64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 计算类别权重\n",
+    "# Compute class weights\n",
     "class_weights = torch.tensor(\n",
-    "    [len(train_labels)/sum(train_labels),  # 正样本权重\n",
-    "     len(train_labels)/(len(train_labels)-sum(train_labels))],  # 负样本权重\n",
+    "    [len(train_labels)/sum(train_labels),  # Positive class weight\n",
+    "     len(train_labels)/(len(train_labels)-sum(train_labels))],  # Negative class weight\n",
     "    device=device\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "a5f697f6",
    "metadata": {},
    "outputs": [
@@ -125,9 +125,9 @@
     }
    ],
    "source": [
-    "# 初始化模型和分词器\n",
+    "# Initialize model and tokenizer\n",
     "tokenizer = BertTokenizer.from_pretrained(\"bert-base-chinese\")\n",
-    "# 修改模型初始化\n",
+    "# Modify model initialization\n",
     "model = BertForSequenceClassification.from_pretrained(\n",
     "    \"bert-base-chinese\",\n",
     "    num_labels=2,\n",
@@ -136,53 +136,53 @@
     "    # classifier_dropout=0.2\n",
     ")\n",
     "\n",
-    "# 将类别权重移动到GPU\n",
+    "# Move class weights to GPU\n",
     "class_weights = class_weights.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "58b3f314",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 创建数据集（保持CPU张量）\n",
+    "# Create datasets (keep CPU tensors)\n",
     "train_dataset = SentimentDataset(train_texts, train_labels, tokenizer)\n",
     "test_dataset = SentimentDataset(test_texts, test_labels, tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2ccf08f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 训练配置（自动处理数据到GPU）\n",
+    "# Training configuration (automatically handle data to GPU)\n",
     "training_args = TrainingArguments(\n",
     "    output_dir='./results',\n",
     "    per_device_train_batch_size=32,\n",
     "    per_device_eval_batch_size=64,\n",
     "    num_train_epochs=3,\n",
     "    eval_strategy=\"epoch\",\n",
-    "    fp16=True,  # 自动启用pin_memory\n",
-    "    dataloader_pin_memory=True,  # 显式启用内存固定\n",
-    "    # learning_rate=3e-5,  # 初始学习率从默认的5e-5调低\n",
-    "    # warmup_ratio=0.1,    # 添加学习率预热\n",
-    "    # weight_decay=0.01,   # L2正则化\n",
-    "    # gradient_accumulation_steps=2,   # 梯度累积\n",
+    "    fp16=True,  # Automatically enable pin_memory\n",
+    "    dataloader_pin_memory=True,  # Explicitly enable memory pinning\n",
+    "    # learning_rate=3e-5,  # Lower initial learning rate from default 5e-5\n",
+    "    # warmup_ratio=0.1,    # Add learning rate warmup\n",
+    "    # weight_decay=0.01,   # L2 regularization\n",
+    "    # gradient_accumulation_steps=2,   # Gradient accumulation\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "8e732d71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 自定义评估函数\n",
+    "# Custom evaluation function\n",
     "def compute_metrics(pred):\n",
     "    labels = pred.label_ids\n",
     "    preds = pred.predictions.argmax(-1)\n",
@@ -195,12 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "07146ef0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 创建训练器\n",
+    "# Create trainer\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "1f835f8c",
    "metadata": {},
    "outputs": [
@@ -323,13 +323,13 @@
     }
    ],
    "source": [
-    "# 开始训练（自动处理数据迁移）\n",
+    "# Start training (automatically handle data migration)\n",
     "trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "4641def6",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "# 最终测试集评估\n",
+    "# Final test set evaluation\n",
     "test_results = trainer.predict(test_dataset)\n",
     "print(\"\\nFinal Test Set Evaluation:\")\n",
     "compute_metrics(test_results)"
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "4035728a",
    "metadata": {},
    "outputs": [
@@ -415,13 +415,13 @@
    ],
    "source": [
     "# --- Save Probabilities for Ensemble ---\n",
-    "print(\"\\n保存测试集预测概率 (BERT)...\")\n",
+    "print(\"\\nSaving test set prediction probabilities (BERT)...\")\n",
     "# Trainer.predict returns logits in test_results.predictions\n",
     "# Apply Softmax to get probabilities\n",
     "logits = torch.tensor(test_results.predictions)\n",
     "probabilities = torch.softmax(logits, dim=-1).numpy() # Convert to numpy array\n",
     "np.save(r'D:\\GitHubRepos\\is6941-ml-social-media\\taptap\\analytics\\predictions\\probabilities_bert.npy', probabilities)\n",
-    "print(\"BERT 概率已保存到 predictions/probabilities_bert.npy\")"
+    "print(\"BERT probabilities saved to predictions/probabilities_bert.npy\")"
    ]
   }
  ],
