--- a/taptap/analytics/traditional_models/logistic_reg.ipynb
+++ b/taptap/analytics/traditional_models/logistic_reg.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "48f39093",
    "metadata": {},
    "outputs": [
@@ -585,9 +585,9 @@
    "source": [
     "# 5. 模型评估\n",
     "y_pred = model.predict(X_test)\n",
-    "print(\"\\n分类报告:\")\n",
+    "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, y_pred))\n",
-    "print(\"混淆矩阵:\\n\", confusion_matrix(y_test, y_pred))"
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))"
    ]
   }
  ],
